# Client_v3

./: .gitignore  CMakeLists.txt  README.md  aspectratiowidget.cpp  aspectratiowidget.h  brightnessdialog.cpp  brightnessdialog.h  cameraregistrationdialog.cpp  cameraregistrationdialog.h  continuousdetectionpopupdialog.cpp  continuousdetectionpopupdialog.h  custommessagebox.cpp  custommessagebox.h  customtabbar.cpp  customtabbar.h  debug_utils.h  dragdropimagelabel.cpp  dragdropimagelabel.h  eventcard.cpp  eventcard.h  eventcardpopupdialog.cpp  eventcardpopupdialog.h  exitconfirmdialog.cpp  exitconfirmdialog.h  fullscreencameradialog.cpp  fullscreencameradialog.h  loginpopup.cpp  loginpopup.h  loginwidget.cpp  loginwidget.h  mainwindow.cpp  mainwindow.cpp.bak  mainwindow.h  notificationitemwidget.cpp  notificationitemwidget.h  notificationlistpanel.cpp  notificationlistpanel.h  resources.qrc
resources/Documents/: index.html
resources/Documents/common/css/: custom.css  docs.css  docs_m.css  layout.css  layout.module.css  menu.css  vs2015.css
resources/Documents/common/font/English/: fonts.css
resources/Documents/common/font/Japanese/: fonts.css
resources/Documents/common/font/Russian/: fonts.css
resources/Documents/common/js/: index.js  layout.9aec24d6126c1a33e947.js  menu.js  title.js
resources/Documents/content/: device.html.js  device_backup.html.js  device_channel.html.js  device_channel_delete.html.js  device_channel_edit.html.js  device_channel_move.html.js  device_channel_set.html.js  device_channel_shortcut.html.js  device_group.html.js  device_group_add.html.js  device_group_delete.html.js  device_group_shortcut.html.js  device_manage.html.js  device_manage_delete.html.js  device_manage_search.html.js  device_manage_set.html.js  device_media.html.js  device_media_add.html.js  device_media_edit.html.js  device_passwordchange.html.js  device_register.html.js  device_register_auto.html.js  device_register_ddnsp2p.html.js  device_register_manual.html.js  device_restore.html.js  device_update.html.js  device_webpage.html.js  device_webpage_add.html.js  device_webpage_delete.html.js  device_webpage_edit.html.js  device_webpage_set.html.js  event.html.js  event_add.html.js  event_add_action.html.js  event_add_trigger.html.js  event_email.html.js  event_email_send.html.js  event_email_smtp.html.js  event_manage.html.js  event_manage_delete.html.js  (+111 more)
